css/style.css
/* fonts Nunito */

@import url('https://fonts.googleapis.com/css?family=Raleway');
/*****RESET RULES*****/
*{
    margin: 0;
    padding: 0;
}
body {
    font-family: 'Raleway', sans-serif;
    font-size: 18px;
    line-height: 20px;
    color: #555;
    /* #008edb;*/
}
a{
    text-decoration: none;
    color:white;
}
a:visited{
    color:white;
}
/*****HELPER CLASS*****/
.clear{
    clear: both;
}
.container{
    width: 1000px;
    margin: 0px auto;
}
.searchError::placeholder,
.searchError::-webkit-input-placeholder,
.searchError:-moz-placeholder,
.searchError::-moz-placeholder,
.searchError:-ms-input-placeholder{
    color: #E74C3C;
}

input[type="text"],
input[type="password"],
input[type="date"],
input[type="datetime"],
input[type="email"],
input[type="number"],
input[type="search"],
input[type="tel"],
input[type="time"] ,
input[type="url"],
select.form-control,
textarea.form-control {
    height: 2.5em;
    width: 50%;
    max-width: 100%;
    padding: 0.5em;
    margin-bottom: 1em;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: normal;
    color: #555;
    font-size: 1em;
    border: 2px solid #ddd;
    border-radius: 3px;
    -webkit-font-smoothing: antialiased;
    -webkit-appearance: none;
    transition: border-color 0.25s, color 0.25s;
}
input[type="text"].form-control:focus,
input[type="password"].form-control:focus,
input[type="date"].form-control:focus,
input[type="datetime"].form-control:focus,
input[type="email"].form-control:focus,
input[type="number"].form-control:focus,
input[type="search"].form-control:focus,
input[type="tel"].form-control:focus,
input[type="time"].form-control:focus,
input[type="url"].form-control:focus,
select.form-control:focus,
textarea.form-control:focus {
    border: 2px solid #3498DB;
    color: #111;
    outline: none;
}
input[type="text"].form-control.error,
.error input[type="text"].form-control,
input[type="password"].form-control.error,
.error input[type="password"].form-control,
input[type="date"].form-control.error,
.error input[type="date"].form-control,
input[type="datetime"].form-control.error,
.error input[type="datetime"].form-control,
input[type="email"].form-control.error,
.error input[type="email"].form-control,
input[type="number"].form-control.error,
.error input[type="number"].form-control,
input[type="search"].form-control.error,
.error input[type="search"].form-control,
input[type="tel"].form-control.error,
.error input[type="tel"].form-control,
input[type="time"].form-control.error,
.error input[type="time"].form-control,
input[type="url"].form-control.error,
.error input[type="url"].form-control,
select.form-control.error,
.error select.form-control,
textarea.form-control.error,
.error textarea.form-control {
    border-color: #E74C3C;
}
input[type="text"].form-control.warning,
.warning input[type="text"].form-control,
input[type="password"].form-control.warning,
.warning input[type="password"].form-control,
input[type="date"].form-control.warning,
.warning input[type="date"].form-control,
input[type="datetime"].form-control.warning,
.warning input[type="datetime"].form-control,
input[type="email"].form-control.warning,
.warning input[type="email"].form-control,
input[type="number"].form-control.warning,
.warning input[type="number"].form-control,
input[type="search"].form-control.warning,
.warning input[type="search"].form-control,
input[type="tel"].form-control.warning,
.warning input[type="tel"].form-control,
input[type="time"].form-control.warning,
.warning input[type="time"].form-control,
input[type="url"].form-control.warning,
.warning input[type="url"].form-control,
select.form-control.warning,
.warning select.form-control,
textarea.form-control.warning,
.warning textarea.form-control {
    border-color: #F1C000;
}
input[type="text"].form-control.success,
.success input[type="text"].form-control,
input[type="password"].form-control.success,
.success input[type="password"].form-control,
input[type="date"].form-control.success,
.success input[type="date"].form-control,
input[type="datetime"].form-control.success,
.success input[type="datetime"].form-control,
input[type="email"].form-control.success,
.success input[type="email"].form-control,
input[type="number"].form-control.success,
.success input[type="number"].form-control,
input[type="search"].form-control.success,
.success input[type="search"].form-control,
input[type="tel"].form-control.success,
.success input[type="tel"].form-control,
input[type="time"].form-control.success,
.success input[type="time"].form-control,
input[type="url"].form-control.success,
.success input[type="url"].form-control,
select.form-control.success,
.success select.form-control,
textarea.form-control.success,
.success textarea.form-control {
    border-color: #1BBC9B;
}
/*****HEADER*****/
header{
    width: 100%;
    height: 80px;
    background: #111;
    line-height: 80px;
}
#logoHolder{
    width: 250px;
    height: 80px;
    /*indigo/#373737*/
    float: left;
}
#logoHolder #logo{
    color:#3498db;
    font-size: 2.3em;
    line-height: 80px;
}
 span{
    color:#3498db/*chartreuse*/;
}
nav{
    width: 40%;
    height: 80px;
    float: left;
    line-height: 80px;
    background-color: #111; 
   /* background-color: #262228; */
}
#menu ul li{
    display: inline-block;
    list-style-type: none;
    padding-right: 15px;
    padding-left: 10px;
    color:white;
}
#menu ul li a:hover{
    /*color:rgb(0, 133, 241);*/
    color:#3498DB;
    transition: .2s linear;
}
.active{
    color:#3498db;
}

/*****SEARCH*****/
#search{
    width: 30%;
    height: 80px; 
    float: right;
    line-height: 80px;
}
#searchBtn{
    width: 60px;
    height: 3em;
    padding:1em;
    border: none;
    background-color: #3498DB;
    position: relative;
    top: 2px;
}
#searchIcon{
    font-size: 20px;
    color:white;
}
#searchBox{
    background: transparent;
    color:white;
}
::-webkit-input-placeholder { /* Chrome */
    color: white;
}
/*****SLIDER*****/
#slider{
    width: 100%;
    height: 500px;
    background-color: #E74C3C;
}
#slider > img{
    width: 200px;
    height: 200px;
}
/*****MAIN*****/
#main{
    width: 100%;
    height: 800px;
    background-color: midnightblue;
}

/*****NEWSLETTER*****/
#newsletter{
    width: 100%;
    height: 200px;
    background-color: #777777;
    text-align: center;
    padding-top: 25px;     
    color: white; 
}
#newsletter input{
    background-color:transparent;
    color:white;
}
#newsletter h1{
    text-transform: uppercase;
    padding-bottom: 10px;
    letter-spacing: 5px;
}
#newsletter p{
    padding-top: 10px;
    padding-bottom: 10px;
}
#newsletter button{
    width: 80px;
    height: 70px;
    padding:10px;
    font-family: 'Raleway';
    border: none;
    background-color:#3498db;
    position: relative;
    top: 3px;
}
#newsletter button:hover{
    transition:.2s linear;
    color:#F1C000;
}
#sendBtn{
    color: white;
    font-size: 2em;
}
#privacy{
    position: relative;
    bottom: 15px;
}
/*****FOOTER*****/
  footer{
    width: 100%;
    height: 325px;
    background-color: #111;
    color: white;
}
footer h1{
    letter-spacing: 2px;
    padding:10 0 0 20px;
}
#left{
    margin-left: 50px;
}

footer ul li{
    position: relative;
    left: 20px;
    display: inline-block;
    padding-right: 10px;
}
footer ul li .fa {
    font-size: 24px;
}
#socialMedia{
    position: relative;
    left: 35px;
    top:20px
}
/*****SOCIAL ICONS*****/
#facebook:hover{
    transition: .2s linear;
    color: #3b5998;
}

#twitter:hover{
    transition: .2s linear;
    color: #0084b4;
}

#googlePlus:hover{
    transition: .2s linear;
    color: #d34836;
}

#instagram:hover{
    transition: .2s linear;
    color: #cd486b;
}
.bottomMenu{
    width: 300px;
    height: 150px;
    float: left;
    margin-top: 50px;
}
#middleBottom{
    position: relative;
    left: 210px;
    bottom: 40px;
    text-align: center;
}
#middleBottom ul li{
    display: block;
    padding-top: 10px;
}
#middleBottom ul li a:hover{
    transition: .2s linear;
    color: #3498db;
}
#gzoneBottom{
    position: relative;
    left: 260px;
}
/*****COPYRIGHT*****/
#copyright{
    text-align: right;
    position: relative;
    bottom: 10px;
    right: 20px;
}
#copyright a:hover{
    transition: .2s linear;
    color: #3498db;
}

